fix(app): zoom on safari iphone should be anciant story now + font in options

--- a/apps/www/app/globals.css
+++ b/apps/www/app/globals.css
@@ -7,3 +7,13 @@
 html {
   font-size: 14px;
 }
+
+input,
+textarea,
+select {
+  @apply text-[16px];
+}
+
+option {
+  font-family: "Roboto", sans-serif;
+}
